Add new lines of code githeri.html

--- a/recipes/githeri.html
+++ b/recipes/githeri.html
@@ -6,5 +6,26 @@
     </head>
     <body>
         <h1>Githeri</h1>
+        <img src="./tastygitheri" alt="tasty githeri" width="75">
+        <h2>Preparing a tasty githeri</h2>
+        <p>Githeri is loved by many because its simple to cook ,healthy and tasty.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 cups beans - boiled</li>
+            <li>2cups maize-boiled</li>
+            <li>2 large potatoes peeled and chopped</li>
+            <li>2 large tomatoes-diced</li>
+            <li>1 small onion-sliced</li>
+            <li>3tbs cooking oil</li>
+            <li>1/2 tsp salt</li>
+            <li>2 large carrots-chopped</li>
+            <li>1 avocado</li>
+        </ul>
+        <h2>Cooking Steps</h2>
+        <ol>
+            <li>Place the onions in a sufuria and add the cooking oil. when it turns a little brown add the tomatoes and stir then cover.</li>
+            <li>Crash the tomatoes when they become soft. Add the carrots and stir then add the mixed beans and maize and stir.</li>
+            <li>Add the potatoes and 1 cup of water and 1/2tsp salt and stir then cover for 10 minutes. if the water finishes before the potatoes are cooked add1/2 cup of water and stir then cover for 5 minutes then turn off the heat and serve.</li>
+        </ol>
     </body>
 </html>
