Add Code putting links in an unordered list so they aren't all on one line

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/githeri.html">Githeri</a>
+        <ul>
+            <li><a href="recipes/githeri.html">Githeri</a></li>
+            <li><a href="recipes/mukimo.html">Mukimo</a></li>
+            <li><a href="recipes/mursik.html">Mursik</a></li>
+        </ul>
     </body>
 </html>
