Remove 'width' attribute Pictures were too small

--- a/recipes/mursik.html
+++ b/recipes/mursik.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Mursik</h1>
-        <img src="./mursik.jpeg" alt="Mursik(sour milk)" width="75">
+        <img src="./mursik.jpeg" alt="Mursik(sour milk)">
         <h2>Prepairing Mursik</h2>
         <p>This is an indigenous drink from Kalenjin land in Africa</p>
         <h2>Ingredients</h2>
