Add 'width' Attribute To 'img' Tag Image was too big

--- a/recipes/githeri.html
+++ b/recipes/githeri.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Githeri</h1>
-        <img src="./tastygitheri" alt="tasty githeri" >
+        <img src="./tastygitheri" alt="tasty githeri" width="300">
         <h2>Preparing a tasty githeri</h2>
         <p>Githeri is loved by many because its simple to cook ,healthy and tasty.</p>
         <h2>Ingredients</h2>
