--- a/recipes/mukimo.html
+++ b/recipes/mukimo.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Mukimo</h1>
-        <img src="./mukimo.jpg" alt="Mukimo">
+        <img src="./mukimo.jpg" alt="Mukimo" width="300">
         <h2>Preparing Mukimo</h2>
         <p>Mukimo is a meal whose origin is from Agikuyu nation.<br>It has a simple recipe</p>
         <h2>Ingredients</h2>
