--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="style.css" />
         <meta charset="UTF-8">
         <title>odin recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/githeri.html">Githeri</a></li>
-            <li><a href="recipes/mukimo.html">Mukimo</a></li>
-            <li><a href="recipes/mursik.html">Mursik</a></li>
+        <h1 class="head">Odin Recipes</h1>
+        <ul class="list">
+            <li class="githeri"><a href="recipes/githeri.html">Githeri</a></li>
+            <li class="mukimo"><a href="recipes/mukimo.html">Mukimo</a></li>
+            <li class="mursik"><a href="recipes/mursik.html">Mursik</a></li>
         </ul>
     </body>
 </html>
